<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimary">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BiografiaFragment"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="25dp">

            <ImageView
                android:layout_width="260dp"
                android:layout_height="76dp"
                android:src="@drawable/ic_logo_conoli_texto" />

            <TextView
                android:paddingTop="5dp"
                android:layout_height="wrap_content"
                android:layout_width="280dp"
                android:gravity="center"
                android:text="@string/about_us"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    <LinearLayout
        android:paddingTop="25dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:paddingLeft="10dp"
            android:src="@drawable/perfil2"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/nome_ra2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/bio2"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="120dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image1"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:paddingLeft="10dp"
            android:src="@drawable/perfil1"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/nome_ra1"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/bio1"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</TableLayout>
</ScrollView>