<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:gravity="center">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_logo_conoli" />

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/nome_cadastro"/>

    </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/nome_tipo_de_administracao"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingTop="16dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <RadioButton
                        android:button="@android:color/transparent"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:background="@drawable/ic_radiobutton_imobiliaria"/>

                    <Space
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_weigh="1"/>

                    <RadioButton
                        android:button="@android:color/transparent"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:background="@drawable/ic_radiobutton_particular" />

            </RadioGroup>

            <TextView
                android:text="@string/nome_tipo_do_imovel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingTop="16dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

    </TableLayout>

</ScrollView>